# market-project

./: .env  .env.test  .gitignore  .pylintrc  Dockerfile  Dockerfile.locust  Makefile  alembic.ini  docker-compose.yaml  locustfile.py  pyproject.toml  pytest.ini
.github/workflows/: main-ci.yml
alembic/: env.py
alembic/data_migration/: 2026_01_20_0306_agregate_reviews.py
alembic/versions/: 2025_11_28_2335_add_review_table.py  2026_01_20_0226_add_product_avg_rating.py  2026_01_20_1934_remove_agregated_field_from_reviews_.py  76feb0f2ca65_initial_migration.py
app/: main.py
app/admin/: admin.py  views.py
app/api/: __init__.py  auth.py  cart.py  carts.py  dependencies.py  orders.py  products.py  review.py  reviews.py  users.py
app/config/: __init__.py  default.py
app/core/: context.py  exception_handler.py  exceptions.py  logger_settings.py  routing.py
app/database/: __init__.py  base.py
app/middleware/: request_id.py
app/repositories/: __init__.py  auth.py  cart.py  orders.py  product.py  products.py  review.py  user.py
app/schemas/: __init__.py  auth.py  base.py  cart.py  orders.py  product.py  products.py  review.py  user.py
app/services/: auth.py  cart.py  orders.py  product.py  products.py  review.py  user.py
app/utils/: logging.py  pagination.py
migrations/: env.py  migration_utils.py
migrations/data_migration/: 2026_01_20_0306_agregate_reviews.py  2026_02_25_1908_set_default_roles_for_users.py
migrations/versions/: 2025_11_28_2335_add_review_table.py  2026_01_20_0226_add_product_avg_rating.py  (+8 more)
tests/: conftest.py
(+49 files in other folders)
